--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/layout"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.dantas.bruno.sysbus.LoginActivity">
+    tools:context="com.dantas.bruno.sysbus.login.LoginActivity">
 
   <ImageView
       android:id="@+id/imageView"
@@ -90,5 +91,16 @@
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/bt_login"
       app:layout_constraintVertical_bias="0.786"/>
+
+  <ProgressBar
+    android:id="@+id/progress"
+    style="?android:attr/progressBarStyle"
+    android:visibility="gone"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    android:layout_marginTop="29dp"
+    app:layout_constraintTop_toBottomOf="@+id/bt_login"/>
 
 </android.support.constraint.ConstraintLayout>
