--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dantas.bruno.sysbus.SplashActivity">
+    android:background="@color/colorPrimaryDark"
+    tools:context="com.dantas.bruno.sysbus.splash.SplashActivity">
 
   <ImageView
       android:id="@+id/imageView2"
