--- a/app/src/release/res/values/google_maps_api.xml
+++ b/app/src/release/res/values/google_maps_api.xml
@@ -17,6 +17,6 @@
     string in this file.
     -->
   <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-    YOUR_KEY_HERE
+    AIzaSyBmtK3uyt44-XTnhaQcPBrAw_u-96Rfl0Q
   </string>
 </resources>
