--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -32,7 +32,7 @@
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="43dp"
+    android:layout_marginTop="72dp"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/imageView">
@@ -104,7 +104,7 @@
   <ProgressBar
     android:id="@+id/progress"
     style="?android:attr/progressBarStyle"
-    android:visibility="gone"
+    android:visibility="visible"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
@@ -115,5 +115,19 @@
     app:layout_constraintRight_toRightOf="parent"
     android:layout_marginLeft="8dp"
     app:layout_constraintLeft_toLeftOf="parent"/>
+
+  <TextView
+    android:id="@+id/tv_msg_erro"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:visibility="gone"
+    android:text="@string/msg_erro_cadastro"
+    android:textColor="@android:color/holo_red_light"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    android:layout_marginTop="8dp"
+    app:layout_constraintTop_toBottomOf="@+id/imageView"
+    android:layout_marginBottom="8dp"
+    app:layout_constraintBottom_toTopOf="@+id/textInputLayout"/>
 
 </android.support.constraint.ConstraintLayout>
