--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginStart="8dp"
-      android:layout_marginTop="74dp"
+      android:layout_marginTop="63dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +30,7 @@
       android:foregroundTint="@android:color/white"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginTop="56dp"
+      android:layout_marginTop="64dp"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
@@ -103,4 +103,17 @@
     android:layout_marginTop="29dp"
     app:layout_constraintTop_toBottomOf="@+id/bt_login"/>
 
+  <TextView
+    android:id="@+id/tv_msg_erro"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/msg_erro_login"
+    android:visibility="gone"
+    android:textColor="@android:color/holo_red_light"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    android:layout_marginTop="8dp"
+    app:layout_constraintTop_toBottomOf="@+id/imageView"
+    android:layout_marginBottom="8dp"
+    app:layout_constraintBottom_toTopOf="@+id/til_email"/>
 </android.support.constraint.ConstraintLayout>
