--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,7 +72,7 @@
       android:layout_marginTop="29dp"
       android:text="@string/login"
       android:backgroundTint="@color/colorAccent"
-      android:textColor="@android:color/white"
+      android:textColor="@android:color/black"
       android:textStyle="bold"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
