--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -23,11 +23,12 @@
       style="?android:attr/progressBarStyleHorizontal"
       android:layout_width="70dp"
       android:layout_height="wrap_content"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
       android:layout_marginTop="8dp"
       android:indeterminate="true"
       android:indeterminateBehavior="repeat"
+      android:progressTint="@color/colorAccent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
 
 </android.support.constraint.ConstraintLayout>
