--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#673AB7</color>
-  <color name="colorPrimaryDark">#512DA8</color>
-  <color name="colorAccent">#4CAF50</color>
+  <color name="colorPrimary">#009688</color>
+  <color name="colorPrimaryDark">#00796B</color>
+  <color name="colorAccent">#FFEB3B</color>
   <color name="colorDivider">#BDBDBD</color>
   <color name="primary_text_material_light">#212121</color>
   <color name="background_material_light">#d6cece</color>
