--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
   <!-- Base application theme. -->
   <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -6,14 +6,15 @@
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
-    <item name="android:textColorPrimary">@color/primary_text_material_light</item>
-    <item name="android:colorBackground">@color/background_material_light</item>
-    <item name="android:divider">@color/colorDivider</item>
+    <!--<item name="android:textColorPrimary">@color/primary_text_material_light</item>-->
+    <!--<item name="android:colorBackground">@color/background_material_light</item>-->
+    <!--<item name="android:divider">@color/colorDivider</item>-->
   </style>
 
-  <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar">
+  <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
+    <item name="android:statusBarColor" tools:targetApi="lollipop">@color/colorPrimaryDark</item>
     <!--<item name="android:backgroundTint">@color/colorAccent</item>-->
   </style>
 
