--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -33,6 +33,7 @@
     android:layout_marginRight="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="72dp"
+    android:textColorHint="@android:color/white"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/imageView">
@@ -42,6 +43,7 @@
       android:inputType="textPersonName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:backgroundTint="@android:color/white"
       android:hint="@string/user_nome"/>
   </android.support.design.widget.TextInputLayout>
 
@@ -54,6 +56,7 @@
     android:layout_marginRight="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
+    android:textColorHint="@android:color/white"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
@@ -63,6 +66,7 @@
       android:inputType="textEmailAddress"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:backgroundTint="@android:color/white"
       android:hint="@string/user_email"/>
   </android.support.design.widget.TextInputLayout>
 
@@ -73,6 +77,7 @@
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginTop="8dp"
+    android:textColorHint="@android:color/white"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
@@ -82,17 +87,20 @@
       android:inputType="textPassword"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:backgroundTint="@android:color/white"
       android:hint="@string/user_senha"/>
   </android.support.design.widget.TextInputLayout>
 
   <Button
     android:id="@+id/bt_cadastro"
-    android:layout_width="wrap_content"
+    android:layout_width="170dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginTop="8dp"
+    android:backgroundTint="@color/colorAccent"
+    android:textStyle="bold"
     android:text="@string/cadastrar"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
@@ -104,7 +112,7 @@
   <ProgressBar
     android:id="@+id/progress"
     style="?android:attr/progressBarStyle"
-    android:visibility="visible"
+    android:visibility="gone"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
