--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <!--<item name="android:divider">@color/colorDivider</item>-->
   </style>
 
-  <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+  <style name="AppTheme.NoActionBar" parent="AppTheme">
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
     <item name="android:statusBarColor" tools:targetApi="lollipop">@color/colorPrimaryDark</item>
