--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -114,7 +114,7 @@
     android:layout_height="wrap_content"
     android:text="@string/msg_erro_login"
     android:visibility="gone"
-    android:textColor="@android:color/holo_red_light"
+    android:textColor="@android:color/holo_red_dark"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_marginTop="8dp"
