--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,4 +9,9 @@
     tools:context="com.dantas.bruno.sysbus.MainsActiity"
     tools:showIn="@layout/app_bar_main">
 
+  <FrameLayout
+      android:id="@+id/container"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
+
 </android.support.constraint.ConstraintLayout>
