--- a/app/src/main/res/layout/activity_info_parada.xml
+++ b/app/src/main/res/layout/activity_info_parada.xml
@@ -3,9 +3,9 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  android:background="#e7e7e7"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent"
+  tools:context="com.dantas.bruno.sysbus.infoponto.InfoParadaActivity">
 
   <TextView
     android:id="@+id/tv_info_parada"
@@ -23,17 +23,20 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>
 
-  <android.support.v7.widget.RecyclerView
-    android:id="@+id/lista_paradas"
+  <ListView
+    android:id="@+id/list_view_trajetos"
     android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginTop="8dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
+    android:layout_height="wrap_content"
+    tools:listitem="@layout/item_lista_paradas"
+    android:layout_marginTop="-36dp"
+    app:layout_constraintTop_toBottomOf="@+id/tv_info_parada"
+    android:layout_marginLeft="8dp"
     app:layout_constraintLeft_toLeftOf="parent"
+    android:layout_marginRight="8dp"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/tv_info_parada"/>
-
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_marginBottom="8dp"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintVertical_bias="0.04"/>
 
 </android.support.constraint.ConstraintLayout>
