--- a/app/src/main/res/layout/activity_info_parada.xml
+++ b/app/src/main/res/layout/activity_info_parada.xml
@@ -5,7 +5,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="com.dantas.bruno.sysbus.infoponto.InfoParadaActivity">
+  tools:context="com.dantas.bruno.sysbus.infoparada.InfoParadaActivity">
 
   <TextView
     android:id="@+id/tv_info_parada"
@@ -19,6 +19,7 @@
     android:text="Estação Centro"
     android:textAlignment="center"
     android:textSize="30sp"
+    android:textStyle="bold"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>
