--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,26 +11,26 @@
     tools:context="com.dantas.bruno.sysbus.login.LoginActivity">
 
   <ImageView
-      android:id="@+id/imageView"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginEnd="8dp"
-      android:layout_marginLeft="8dp"
-      android:layout_marginRight="8dp"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="63dp"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:srcCompat="@mipmap/ic_launcher"/>
+    android:id="@+id/imageView"
+    android:layout_width="158dp"
+    android:layout_height="106dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="32dp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@drawable/sys"
+    tools:layout_editor_absoluteY="60dp"/>
 
   <android.support.design.widget.TextInputLayout
       android:id="@+id/til_email"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:textColorHint="@android:color/white"
-      android:layout_marginTop="64dp"
-      app:layout_constraintHorizontal_bias="0.0"
+      android:layout_marginTop="53dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/imageView">
@@ -115,11 +115,14 @@
     android:layout_height="wrap_content"
     android:text="@string/msg_erro_login"
     android:visibility="gone"
+    android:textStyle="bold"
     android:textColor="@android:color/holo_red_dark"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_marginTop="8dp"
     app:layout_constraintTop_toBottomOf="@+id/imageView"
     android:layout_marginBottom="8dp"
-    app:layout_constraintBottom_toTopOf="@+id/til_email"/>
+    app:layout_constraintBottom_toTopOf="@+id/til_email"
+    app:layout_constraintHorizontal_bias="0.502"
+    app:layout_constraintVertical_bias="0.85"/>
 </android.support.constraint.ConstraintLayout>
