--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,19 +9,20 @@
     tools:context="com.dantas.bruno.sysbus.splash.SplashActivity">
 
   <ImageView
-      android:id="@+id/imageView2"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:srcCompat="@drawable/launcher"
-      app:layout_constraintTop_toTopOf="parent"
-      android:layout_marginTop="59dp"/>
+    android:id="@+id/imageView2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:srcCompat="@drawable/sysbus"
+    android:layout_marginTop="147dp"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintHorizontal_bias="0.503"/>
 
   <ProgressBar
       android:id="@+id/progressBar2"
       style="?android:attr/progressBarStyleHorizontal"
-      android:layout_width="70dp"
+      android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:indeterminate="true"
@@ -30,5 +31,6 @@
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
+
 
 </android.support.constraint.ConstraintLayout>
