--- a/app/src/main/res/layout/item_lista_paradas.xml
+++ b/app/src/main/res/layout/item_lista_paradas.xml
@@ -1,44 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-              android:layout_height="70dp">
-<RelativeLayout
-  android:id="@+id/ll"
-  android:layout_width="40dp"
-  android:layout_height="40dp"
-  android:background="@color/colorPrimaryDark"
-  app:layout_constraintTop_toTopOf="parent"
-  android:layout_marginLeft="16dp"
-  app:layout_constraintBottom_toBottomOf="parent"
-  app:layout_constraintLeft_toLeftOf="parent"
-  android:layout_marginTop="8dp"
-  android:layout_marginBottom="8dp">
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAlignment="center"
-    android:gravity="center"
-    android:textColor="@color/colorAccent"
-    android:textSize="30sp"
-    android:text="02"
-    android:id="@+id/tv_onibus"
-    android:layout_centerVertical="true"
-    android:layout_centerHorizontal="true"/>
-</RelativeLayout>
+<android.support.constraint.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="70dp">
+
+  <RelativeLayout
+    android:id="@+id/ll"
+    android:layout_width="55dp"
+    android:layout_height="40dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginTop="8dp"
+    android:background="@color/colorPrimaryDark"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <TextView
+      android:id="@+id/tv_onibus"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerHorizontal="true"
+      android:layout_centerVertical="true"
+      android:gravity="center"
+      android:text="132"
+      android:textAlignment="center"
+      android:textColor="@color/colorAccent"
+      android:textSize="30sp"/>
+  </RelativeLayout>
+
   <TextView
     android:id="@+id/tv_descricao"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:layout_marginLeft="17dp"
+    android:layout_marginTop="8dp"
     android:text="TextView / TextView"
     android:textSize="23sp"
-    app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
     app:layout_constraintLeft_toRightOf="@+id/ll"
-    android:layout_marginLeft="17dp"
+    app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.296"/>
 
   <TextView
@@ -46,13 +50,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
     android:text="TextView"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:layout_marginTop="8dp"
-    app:layout_constraintTop_toBottomOf="@+id/tv_descricao"
-    app:layout_constraintVertical_bias="1.0"
+    app:layout_constraintHorizontal_bias="0.34"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintHorizontal_bias="0.251"/>
+    app:layout_constraintTop_toBottomOf="@+id/tv_descricao"
+    app:layout_constraintVertical_bias="1.0"/>
 
 </android.support.constraint.ConstraintLayout>
