--- a/app/src/main/res/layout/nav_header_principal.xml
+++ b/app/src/main/res/layout/nav_header_principal.xml
@@ -2,32 +2,55 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="@dimen/nav_header_height"
-  android:background="@drawable/side_nav_bar"
+  android:background="@color/colorPrimaryDark"
   android:gravity="bottom"
+  android:orientation="vertical"
   android:padding="@dimen/padding"
   android:theme="@style/ThemeOverlay.AppCompat.Dark">
+  <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-  <ImageView
-      android:id="@+id/imageView"
+    <TextView
+      android:layout_gravity="center_vertical"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:paddingTop="@dimen/nav_header_vertical_spacing"
-      app:srcCompat="@android:drawable/sym_def_app_icon"/>
-
-  <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:paddingTop="@dimen/nav_header_vertical_spacing"
-      android:text="Android Studio"
-      android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
-
-  <TextView
+      android:textSize="40sp"
+      android:textStyle="bold"
+      android:text="@string/app_name"
+      android:textColor="@color/colorAccent"
       android:id="@+id/textView"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="android.studio@android.com"/>
+      android:layout_centerVertical="true"
+      android:layout_alignParentStart="true"
+      android:layout_marginStart="41dp"/>
+
+    <ImageView
+      android:id="@+id/icon_view"
+      android:layout_width="92dp"
+      android:layout_height="76dp"
+      android:layout_gravity="end"
+      android:layout_marginRight="16dp"
+      android:paddingTop="@dimen/nav_header_vertical_spacing"
+      app:srcCompat="@drawable/sys"
+      android:layout_alignParentTop="true"
+      android:layout_alignParentEnd="true"
+      android:layout_marginEnd="17dp"/>
+  </RelativeLayout>
+
+  <TextView
+    android:id="@+id/tv_user_nome"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="@dimen/nav_header_vertical_spacing"
+    android:text="Android Studio"
+    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
+  <TextView
+    android:id="@+id/tv_user_email"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="android.studio@android.com"/>
 
 </LinearLayout>
